@@ -1,5 +1,7 @@
 package utilidades;
 
+import org.example.modelos.Entrenador;
+import org.example.modelos.Movimiento;
 import org.example.modelos.Pokemon;
 import org.example.modelos.TipoPokemon;
 
@@ -62,7 +64,50 @@ public class UtilidadesPokemon {
 
     public Map<TipoPokemon, List<Pokemon>> obtenerPokemonPurosPorTipoStream(List<Pokemon> pokemons){
 
-        return pokemons.stream().filter(p -> p.getTipos().size()==1).collect(Collectors.groupingBy(p -> p.getTipos().get(0)));
+        return pokemons.stream().filter(p -> p.getTipos().size()==1).collect(Collectors.groupingBy(p -> p.getTipos().getFirst()));
     }
+
+    public List<Movimiento> movimientosQuePuedeAprender(Pokemon pokemon, List<Movimiento> movimientos){
+        List<Movimiento> movimientosQuePuedeAprender = new ArrayList<>();
+
+        for (Movimiento movimiento : movimientos) {
+            if (pokemon.getTipos().containsAll(movimientos)){
+                movimientosQuePuedeAprender.add(movimiento);
+            }
+        }
+
+        return movimientosQuePuedeAprender;
+    }
+
+    public Map<Entrenador, Integer> asignarEquipoPorTipos(List<Pokemon> pokemon, List<Entrenador> entrenadores){
+        Map<Entrenador, Integer> equipoPorTipos = new HashMap<>();
+
+        for (Entrenador entrenador : entrenadores) {
+            int contador = 0;
+            for (Pokemon p : pokemon) {
+                if (entrenador.getTiposPreferidos().containsAll(p.getTipos())){
+                    contador++;
+                }
+            }
+            equipoPorTipos.put(entrenador, contador);
+        }
+
+        return equipoPorTipos;
+    }
+
+    public Map<Entrenador, Object> coincidencias(List<Entrenador> entrenadores, List<TipoPokemon> tipos){
+        Map<Entrenador, Object> coincidencias = new HashMap<>();
+
+        for (Entrenador entrenador : entrenadores) {
+            List<TipoPokemon> tiposPreferidos = new ArrayList<>(entrenador.getTiposPreferidos());
+            if (tiposPreferidos.retainAll(tipos)){
+                coincidencias.put(entrenador, tiposPreferidos);
+            }
+        }
+
+        return coincidencias;
+    }
+
+
 
 }
